// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should override icon if set explicitly 1`] = `
<DocumentFragment>
  <div
    class="css-nhrqr1"
    data-chakra-component="CAlert"
    role="alert"
  >
    <svg
      class="css-12j51pv css-1oh9bp8 css-3v23kb"
      data-chakra-component="CAlertIcon"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
    
      <path
        d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
        fill="currentColor"
      />
      
    
    </svg>
  </div>
</DocumentFragment>
`;

exports[`should render correct variant styles 1`] = `
<DocumentFragment>
  <div
    class="css-j7qwjs css-0"
    data-chakra-component="CStack"
  >
    <div
      class="css-jc40v6"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="css-12j51pv css-1oh9bp8 css-8uesx6"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
    <div
      class="css-u5y8wy"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="css-12j51pv css-1oh9bp8 css-uoder"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
    <div
      class="css-16xha8s"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="css-12j51pv css-1oh9bp8 css-8uesx6"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
    <div
      class="css-i78vk9"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="css-12j51pv css-1oh9bp8 css-8uesx6"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-8c8mos"
    data-chakra-component="CAlert"
    role="alert"
  >
    <svg
      class="css-12j51pv css-1oh9bp8 css-9y8umg"
      data-chakra-component="CAlertIcon"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
    
      <g
        stroke="currentColor"
        strokewidth="1.5"
      >
        
      
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokelinecap="full"
        />
        
      
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="none"
          strokelinecap="full"
        />
        
      
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokemiterlimit="10"
        />
        
    
      </g>
      
    
    </svg>
     
    <div
      class="css-11a523j"
      data-chakra-component="CAlertTitle"
    >
      alert title
    </div>
     
    <div
      class="css-0"
      data-chakra-component="CAlertDescription"
    >
      alert description
    </div>
  </div>
</DocumentFragment>
`;
